fix:ヘッダーのalign-items: centerの定義を変更した

--- a/src/scss/modules/_header.scss
+++ b/src/scss/modules/_header.scss
@@ -7,16 +7,18 @@
   width: 100%;
   box-shadow: 0 5px 20px 0 $V_COLOR_GRAY1;
   display: flex;
+  align-items: center;
   justify-content: space-between;
 }
 .header__logo {
-  display: flex;
-  align-items: center;
   margin-left: 20px;
   cursor: pointer;
 }
 .header__logo img {
   width: 280px;
+}
+.header__nav {
+  height: 100%;
 }
 .header__card {
   height: 100%;
